--- a/src/static/current_heats.html
+++ b/src/static/current_heats.html
@@ -3,46 +3,129 @@
 <head>
   <title>US Nationals 2016 Status</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src="current_heats.js"></script>
-  <link rel="stylesheet" src="current_heats.css" type="text/css"></link>
-</title>
+  <style>
+td,th {
+  font-weight: bold;
+  border: 2px solid black;
+  font-size: 36px;
+}
+table {
+  width: 80%;
+}
+td {
+  height: 100px;
+}
+
+td.name {
+  width: 10%;
+  text-align: center;
+}
+td.current {
+  width: 30%;
+}
+td.nextevent {
+  width: 60%;
+}
+
+span.eventname {
+  height: 100px;
+  position: relative;
+  top: -35px;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+th {
+  background-color: #bbbbbb;
+  font-weight: bold;
+  padding: 10px;
+}
+
+tr#r td.name {
+  background-color: #ff0000;
+}
+tr#b td.name {
+  background-color: #4444ff;
+}
+tr#g td.name {
+  background-color: #00ff00;
+}
+tr#o td.name {
+  background-color: #ff8800;
+}
+tr#y td.name {
+  background-color: #ffff00;
+}
+
+table {
+  border-collapse: collapse;
+}
+  </style>
+</head>
 <body>
-  <table>
+  <table align="center">
     <tr>
       <th>Stage</th>
-      <th colspan="2">Event</th>
+      <th>Right Now</th>
       <th>Next up</th>
     </tr>
     <tr id="r">
       <td class="name">Red</td>
-      <td class="icon"></td>
-      <td class="eventname"></td>
-      <td class="nextup"></td>
+      <td class="current">
+        <span class="icon"></span>
+        <span class="eventname"></span>
+      </td>
+      <td class="nextevent">
+        <span class="icon"></span>
+        <span class="eventname"></span>
+      </td>
     </tr>
     <tr id="b">
       <td class="name">Blue</td>
-      <td class="icon"></td>
-      <td class="eventname"></td>
-      <td class="nextup"></td>
+      <td class="current">
+        <span class="icon"></span>
+        <span class="eventname"></span>
+      </td>
+      <td class="nextevent">
+        <span class="icon"></span>
+        <span class="eventname"></span>
+      </td>
     </tr>
     <tr id="g">
       <td class="name">Green</td>
-      <td class="icon"></td>
-      <td class="eventname"></td>
-      <td class="nextup"></td>
+      <td class="current">
+        <span class="icon"></span>
+        <span class="eventname"></span>
+      </td>
+      <td class="nextevent">
+        <span class="icon"></span>
+        <span class="eventname"></span>
+      </td>
     </tr>
     <tr id="o">
       <td class="name">Orange</td>
-      <td class="icon"></td>
-      <td class="eventname"></td>
-      <td class="nextup"></td>
+      <td class="current">
+        <span class="icon"></span>
+        <span class="eventname"></span>
+      </td>
+      <td class="nextevent">
+        <span class="icon"></span>
+        <span class="eventname"></span>
+      </td>
     </tr>
     <tr id="y">
       <td class="name">Yellow</td>
-      <td class="icon"></td>
-      <td class="eventname"></td>
-      <td class="nextup"></td>
+      <td class="current">
+        <span class="icon"></span>
+        <span class="eventname"></span>
+      </td>
+      <td class="nextevent">
+        <span class="icon"></span>
+        <span class="eventname"></span>
+      </td>
     </tr>
   </table>
+  <script src="current_heats.js"></script>
 </body>
 </html>
