--- a/src/static/current_heats.html
+++ b/src/static/current_heats.html
@@ -6,8 +6,10 @@
   <style>
 td,th {
   font-weight: bold;
-  border: 2px solid black;
+  border: 2px solid #888888;
   font-size: 36px;
+  padding: 5px;
+  font-family: Roboto, Helvetica, Tahoma, sans-serif;
 }
 table {
   width: 80%;
@@ -44,9 +46,11 @@ th {
 
 tr#r td.name {
   background-color: #ff0000;
+  color: #ffffff;
 }
 tr#b td.name {
   background-color: #4444ff;
+  color: #ffffff;
 }
 tr#g td.name {
   background-color: #00ff00;
