More s/heat/group/g-ing

--- a/src/static/current_groups.html
+++ b/src/static/current_groups.html
@@ -133,6 +133,6 @@ table {
       </td>
     </tr>
   </table>
-  <script src="current_heats.js"></script>
+  <script src="current_groups.js"></script>
 </body>
 </html>
